--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,9 @@
-<h1><%= @student.to_s %></h1>
+<h1><%= "#{@student.to_s} " %></h1>
+
+<% if @student.active == true %>
+<%= "This student is currently active."%>
+<%  else %>
+<%= "This student is currently inactive." %>
+<% end %>
+
+<a href="/show"> Return to the show page</a>
