--- a/app/views/students/edit.erb
+++ b/app/views/students/edit.erb
@@ -1,11 +1,11 @@
-<h1>Edit/Activate Page</h1>
+<h1>Edit Page</h1>
 
 <%= form_for @student do |f| %>
   <%= f.label :first_name %>
   <%= f.text_field :first_name %> <br>
   <%= f.label :last_name %>
   <%= f.text_field :last_name %> <br>
-  
+
   Check the box to be active! <%= f.check_box :active %>
   <%= f.submit %>
 <% end %>
